# video-tool-cli

./: .env.example  AGENTS.md  BUGFIXES.md  CLAUDE.md  DESCRIPTION_FIX.md  FEATURE_UPDATES.md  FINAL_FIXES.md  README.md  REFACTORING_NOTES.md  context.md  instructions.md  main.py  main_old.py  pyproject.toml  pytest.ini  requirements.txt  split_video.py  test-requirements.txt  todo.md  video-tool.code-workspace  video_processor.py
.claude-plugin/: plugin.json
docs/: cli_manual.md
mcp-server/: config.yaml  requirements.txt  server.py
mcp-server/tools/: video_tools.py
mcp_server/: __init__.py  server.py
mcp_server/tools/: mcp-docs.md  video_tools.py
scripts/: README.md  concatenate_videos.py  make_fast_concat_ready.py  run_full_pipeline.py  split_video.py
skills/video-tool/: SKILL.md  workflows.md
skills/video-tool/templates/: context-cards.md  description.md  seo-keywords.md  social-posts.md
tests/: README.md  __init__.py  conftest.py  test_bunny_deployment.py  test_cli_generate.py  test_cli_pipeline.py  test_content_generation.py  test_editing.py  test_file_methods.py  test_main_integration.py
tests/test_data/: mock_generators.py  sample_data.py
video_tool/: __init__.py  cli.py  config.py  logging_config.py  prompts.yaml  run_full_pipeline.py  ui.py  video_processor.py
video_tool/cli/: __init__.py  content_commands.py  deploy_commands.py  generate_commands.py  pipeline.py  video_commands.py
video_tool/video_processor/: __init__.py  base.py  concatenation.py  constants.py  content.py  deployment.py  download.py  editing.py  file_management.py  processor.py  shared.py  silence.py  transcript.py  youtube.py
