[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-tool"
version = "0.1.0"
description = "A professional video processing tool with MCP server capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mcp>=1.12.2",
    "moviepy>=2.1.2",
    "openai>=1.78.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-ffmpeg>=2.0.12",
    "uvicorn>=0.35.0",
    "groq>=0.8.0",
    "pyyaml>=6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["video_tool*", "mcp_server*"]

[tool.uv.workspace]
members = ["mcp_server"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "moviepy>=2.1.2",
    "numpy>=2.2.5",
    "pillow>=10.4.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.8",
]
