[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-tool"
version = "0.1.0"
description = "A professional video processing tool with MCP server capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audioop-lts>=0.2.1; python_version >= '3.13'",  # audioop replacement for Python 3.13+
    "loguru>=0.7.3",
    "mcp>=1.12.2",
    "moviepy>=2.1.2",
    "openai>=1.78.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-ffmpeg>=2.0.12",
    "uvicorn>=0.35.0",
    "groq>=0.8.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "requests>=2.32.5",
    "pydantic>=2.11.4",
    "typer>=0.15.0",
    "yt-dlp>=2024.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.scripts]
video-tool = "video_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_tool*", "mcp_server*"]

[tool.uv.workspace]
members = ["mcp_server"]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "moviepy>=2.1.2",
    "numpy>=2.2.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "responses>=0.25.8",
]
